--- a/css/style.css
+++ b/css/style.css
@@ -244,3 +244,53 @@ body {
   color: #475569;
   max-width: 384px;
 }
+
+.resultIcon {
+  background: #eef2ff;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center; 
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+
+
+.result-count {
+  display: flex;
+  gap: 16px;
+}
+
+.resultH2 {
+  font-size: 60px;
+  font-weight: 700;
+  color: #4F46E5;
+}
+.resultP {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.resultBg{
+  background: #F8FAFC;
+}
+
+.result-count1 {
+  width: 245px;
+  border: none;
+  border-right: 1px solid #CBD5E1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.result-count2 {
+  width: 245px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
