--- a/css/style.css
+++ b/css/style.css
@@ -362,3 +362,54 @@ body {
   border-left: 3px solid #E0E7FF;
   padding-left: 10px;
 }
+
+.testimonialCards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
+  column-gap: 20px;
+  row-gap: 5px;
+  max-width: 1216px;
+  padding: 0 112px;
+  margin: 0 auto;
+  align-items: start;
+  gap: 24px;
+}
+
+.testimonialCardContainer{
+  gap: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.testimonialCard {
+  max-width: 384px;
+  height: auto;
+  padding: 24px;
+  border: 1px solid #E0E7FF;
+  border-radius: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #fff; 
+}
+
+.testimonialCardContainer p {
+  color: #475569;
+  font-weight: 400;
+}
+
+.testimonialCardImg {
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+}
+
+.testimonialAuthor{
+  display: flex;
+  gap: 16px;
+  padding-top: 10px;
+}
+
+.testimonialCardDescrip {
+  padding: 10px 0;
+}
