--- a/css/style.css
+++ b/css/style.css
@@ -423,3 +423,22 @@ body {
 .testimonialCardDescrip {
   padding: 10px 0;
 }
+
+.VisitCardContainer{
+  display: flex;
+  gap: 10px;
+}
+
+.VisitCard{
+  padding: 24px;
+  border: 1px solid #E0E7FF;
+  border-radius: 14px;
+}
+
+.VisitCard h2 {
+  margin: 5px 0;
+}
+
+.VisitCard p {
+  max-width: 90%;
+}
