--- a/css/style.css
+++ b/css/style.css
@@ -23,22 +23,15 @@ body {
   margin: 0 auto;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
+
 
 .logoimg {
-  width: 40px;
-  height: 40px;
+  width: 100px;
+  height: 100px;
   object-fit: contain;
 }
 
-.logo h1 {
-  font-size: 1.5rem;
-  margin: 0;
-}
+
 
 .navCenter {
   display: flex;
@@ -579,7 +572,7 @@ body {
 .downloadApp {
   background-color: #EEF2FF;
   /* position: relative; */
-  height: 900px;
+  height: 600px;
   overflow: hidden;
 }
 
@@ -633,7 +626,7 @@ body {
 }
 
 
-.btn2 {
+.btn4 {
   padding: 12px 24px;
   font-size: 16px;
   font-weight: 600;
@@ -678,4 +671,57 @@ body {
   right: 0;
 }
 
+/* footerContainer */
 
+footer {
+  background-color: #F8FAFC;
+}
+
+.footerContainer {
+  display: flex;
+  justify-content: space-between;
+  padding: 64px 0 20px 0;
+  max-width: 1216px;
+  margin: auto;
+}
+
+.footerContainer h2 {
+  font-size: 16px;
+  font-weight: 700;
+  padding-bottom: 12px;
+}
+
+.footerContainer li {
+  list-style: none;
+  padding: 0;
+  gap: 10px;
+  line-height: 30px;
+  cursor: pointer;
+  color: #475569;
+}
+
+.footerBottom{
+  max-width: 1216px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: none;
+  border-top: 1px solid #CBD5E1;
+  padding: 8px 0 16px 0;
+}
+
+.footerBottom p {
+  color: #94A3B8;
+}
+
+.footerCenterImg {
+  height: 40px;
+  width: 40px;
+  border: 1px solid #CBD5E1;
+  border-radius: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
