--- a/css/styleres.css
+++ b/css/styleres.css
@@ -534,7 +534,7 @@
 
   /* Visit Us */
   .VisitCardContainer{
-    flex-direction: column;
+    grid-template-columns: 1fr;
     gap: 15px;
     padding-right: 40px;
   }
