updated footer container

--- a/css/styleres.css
+++ b/css/styleres.css
@@ -636,7 +636,7 @@
 
   /* Footer */
   .footerContainer {
-    flex-direction: column;
+    grid-template-columns: 1fr;
     padding: 30px 15px;
   }
 
