updated navCenter for small devices

--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,8 @@ body {
   justify-content: space-between;
   max-width: 1216px;
   height: 80px;
-  padding: 12px 100px;
+  padding: 0 112px;
   margin: 0 auto;
-
 }
 
 
