--- a/css/styleres.css
+++ b/css/styleres.css
@@ -356,6 +356,7 @@
     position: absolute;
     top: 80px;
     left: 0;
+    gap: 1px;
     width: 100%;
     background: #fff;
     padding: 20px;
